Fix quote alignment

--- a/src/layouts/Layout/Navbar/style.module.css
+++ b/src/layouts/Layout/Navbar/style.module.css
@@ -434,16 +434,19 @@
 }
 
 .quote {
+  padding-top: 4.5rem;
+  position: relative;
+
   &:before {
-    color: var(--accent-color);
-    content: '\201C';
-    font-family: var(--font-headline);
-    font-size: 7em;
-    left: 50%;
-    line-height: 1;
-    position: absolute;
+    transform: translateX(-50%);
     top: 0;
-    transform: translateX(-50%) translateY(22.5%);
+    position: absolute;
+    line-height: 1;
+    left: 50%;
+    font-size: 7rem;
+    font-family: var(--font-headline);
+    content: '\201C';
+    color: var(--accent-color);
   }
 
   blockquote {
